tests/ui/traits/const-traits/minicore-drop-fail.stderr
error[E0493]: destructor of `NotDropImpl` cannot be evaluated at compile-time
  --> $DIR/minicore-drop-fail.rs:27:13
   |
LL |     let _ = NotDropImpl;
   |             ^^^^^^^^^^^- value is dropped here
   |             |
   |             the destructor for this type cannot be evaluated in constant functions

error[E0493]: destructor of `Contains<NotDropImpl>` cannot be evaluated at compile-time
  --> $DIR/minicore-drop-fail.rs:29:13
   |
LL |     let _ = Contains(NotDropImpl);
   |             ^^^^^^^^^^^^^^^^^^^^^- value is dropped here
   |             |
   |             the destructor for this type cannot be evaluated in constant functions

error[E0493]: destructor of `Conditional<()>` cannot be evaluated at compile-time
  --> $DIR/minicore-drop-fail.rs:31:13
   |
LL |     let _ = Conditional(());
   |             ^^^^^^^^^^^^^^^- value is dropped here
   |             |
   |             the destructor for this type cannot be evaluated in constant functions

error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> $DIR/minicore-drop-fail.rs:35:28
   |
LL | const fn drop_arbitrary<T>(_: T) {
   |                            ^ the destructor for this type cannot be evaluated in constant functions
LL |
LL | }
   | - value is dropped here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0493`.
